css/styles.css
/* // Reset
// -------------------------------------- */
.sr-only{
    display: none;
}

*{
    border: solid red;
}
a{
    text-decoration: none;
}

body{
    margin: 0;
    overflow-x: hidden;
}

p, h1, h2, h3 ,h4{
    margin: .5rem 2rem .5rem;
}

li {
    padding-right: 2rem;
}


/* // Root Styles
// ------------------------------- */

:root{
    --primary-colour: #8224c7;
    --secondary-colour: #0066FF;
    --third_colour: #FDA768;
    font-family:"Avenir", sans-serif;
}

.weblink {
    color: black;
}
.weblink:hover{
    color: blue;
}
p {
    font-size: 1.1em;
}
.coloured-text {
    color: var(--secondary-colour);
}

h2, h4{
    margin-bottom: 0;
}
h1 {
    margin-bottom: 0;
    margin-top: 1rem;
    font-weight: bold;
}

.logo {
    width: 250px;
    height: 100px;
}

button{
    border: none;
    width: 9rem;
    height: 2.3rem;
    font-weight: 600;
    margin-left: 2rem;
    background-color: white;
    border-radius: 5px;
}

.contactbutton:hover{
    background-color: rgb(234, 234, 234);
    cursor: grab;
}

footer button {
    margin-left: 0px;
}

@media only screen and (min-width: 768px) {
    h1{
        font-size: 2.4rem;
    }}


/* // -----------------------------------
// Navigation */
.primary-navigation{
    list-style:none;
    padding: 0;
    margin:0;
    display: flex;
    gap: 2em;
}
.underline{
    display: inline-block;
    position: relative;
    color: white;
}

.underline::after{
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: var(--third_colour);
    transform-origin: bottom left;
    transition: transform 0.15s ease-out;
}

.underline:hover::after{
    transform: scaleX(1);
    transform-origin: bottome left;

}



/* // Navigation - Mobile Devices
// -------------------------------------- */
    .primary-navigation {
        position: fixed;
        z-index: 1000;
        inset: 0 0 0 30%;
        background: hsl(0, 0%, 100%,0.1);
        -webkit-backdrop-filter: blur(1rem);
        backdrop-filter: blur(1rem);
        flex-direction: column;
        padding: min(30vh, 10rem) 2em;
        transform: translateX(100%);
        transition: transform 250ms ease-in;
     }
     #about .primary-navigation, #contact .primary-navigation, #portfolio .primary-navigation {
        background: hsla(0, 0%, 51%, 0.475);
     }
     @media only screen and (min-width: 1200px) {
        #about .primary-navigation, #contact .primary-navigation, #portfolio .primary-navigation {
            background: none;
        }
     }

     .primary-navigation[data-visible="true"]{
        transform: translateX(0%);
    }

     .hamburger {
        position: absolute;
        z-index: 9999;
        top: 1rem;
        right: 0rem;
     }

     nav > ul > li > a:hover{
        color: var(--third_colour);

     }

     ul > li {
        display: flex;
        flex-direction: column;
        align-items: center;
     }


     @media only screen and (min-width: 1200px) {
        body .hamburger{
            display: none;
        }
         .primary-navigation{
            flex-direction: row;
            padding:0;
            position: relative;
            backdrop-filter:none;
            inset: 0;
            transform: translateX(0);
            background: none;
        }
        .navcontainer{
            display: flex;
            justify-content: right;
            flex:auto;
            padding-top: 2rem;
            padding-right:15rem;
            padding-left: 15rem;
            margin-left: -10rem;

        }
        .primary-navigation li a {
            font-size: 1.4rem;
        }
        .header{
            padding-top: 20px;
            align-content: space-between;
        }
        .header .logo {
            position: relative;
        }
    }
/* Header
-------------------------------------------- */
.header{
   height: clamp(150px, 14vw, 180px);
   background-image: url(../images/header2.svg);
   background-position: center;
   background-size: cover;
   display: flex;
   padding-left: 12vw;
}

#main_page .header{
    background-image: none;
}

.header ul{
    display: flex;
    align-items: center;
}
.header .logo {
    position: absolute;
    top:1rem;
    left:1rem;
}

@media only screen and (min-width: 768px) {
    .header .logo {
        position: relative;
    }
}

/* Footer
----------------------------------------- */

footer {
    background-image: url(../images/footer.svg);
    margin-top: -200px; 
    height: auto;
    padding-top: 50px;
}

footer p{
    margin-bottom: 0px
}

.footer_info{
    padding-top: 220px;
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: auto;
}

.footer_contain{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.f_container{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.copyright {
    font-size: .7rem;
}

@media only screen and (min-width: 768px) {
    footer{
        height: 450px;
        padding-top: 100px;
    }
    footer, .footer_info {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .footer_info a{
        margin: 0px;
        padding: 0px;
        margin-bottom: 10px;
    }
    .footer_contain{
        flex-direction: row;
    }
    .copyright {
        font-size: 1rem;
        padding-top: 5rem;
    }
}



/* ------------------------------------------------------------------------------------------------------------------
------------------------------------------------------------------------------------------------------------------  */

/* Individual Page Styling
            |
            |
            |
            V                
                                                                                                                    */
/* Main Page
-------------------------------------- */
#main_page {
background-image: url(../images/header.svg);
background-repeat: repeat-x;
}

.hero {
    color: white;
    height: 150px;
}
.why {
    padding-top: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.why > p {
    max-width: 900px;
}

.devices_mobile, .devices_desktop {
    position: relative;
    z-index: -1;
}
@media only screen and (max-width:720px) {
    .devices_mobile {
        display: inline;
    }
    .devices_desktop{
        display: none;
    }
    
}
@media only screen and (min-width:720px) {
    .devices_mobile {
        display: none;
    }
    .devices_desktop{
        display: inline;
    }
    
}


.monthly_subscription{
    padding-top: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image: url(../images/bubbles.svg); 
    padding-bottom: 50px;
}

.dollar {
    width: 130px;
}

.relax {
    width: 300px;
    height: auto;
}

.feature{
    margin-left: 2rem;
    display: flex;
    align-items: center;
    padding-left: 1rem;
}
.feature_icon {
    width: 30px;
}

.right h4 {
    color: var(--secondary-colour);
}

.not_convinced{
    padding-top: 10px;
    padding-bottom: 10px;
    background-image:linear-gradient(#b9d5ff,white);
}

.here_to_help{
    padding-bottom: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
@media only screen and (min-width: 768px) {
    .not_convinced, .here_to_help{
        padding-left: clamp(0rem, 10vw, 50rem);
        padding-right: clamp(0rem, 10vw, 50rem);
        padding-top: 20px;
        text-align: center;
    }
    }
.handshake {
    width: 300px;
}

@media only screen and (min-width: 768px) {
    .features, .hero {
        margin-left: clamp(0rem, 11vw, 20rem);
        margin-right: clamp(5rem, 2vw, 20rem);
    }
}


/* About page
------------------------------------------------------------------ */
.container{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.about_me{
    display: flex;
    justify-content: center;
}
.me {
    width: 300px;
}

.wordpress{
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image: url(../images/polybackground.svg);
    padding-bottom: 60px;
}
.feature_icon2 {
    width: 20px;
}

.break{
    background-image:linear-gradient(#bdcfd7,white);
    height: 250px;
}
.mission {
    margin-top: -180px;
}

.philo_image{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

}
.philosophies{
    margin-top: 30px;
}
.philosophy_icon {
    width: 80px;
}
.philosophy{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.philosophy_image {
    width: 150px;
}
.coded_image{
    width: 400px;
}


@media only screen and (min-width: 1100px) {
    .about_me, .wordpress {
        padding-left: clamp(0rem, 15vw, 50rem);
        padding-right: clamp(0rem, 10vw, 50rem);
    }
    .about_right{
        max-width: 600px;
    }
    .container{
        flex-direction: row;
    }
}

/* 
Contact Page
------------------------------------------------------------------ */
.contact_img{
    width: 300px;
}
.contact{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.contact_box{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
    box-shadow: 0px 0px 5px lightgray;
    border-width: 0px;
    border-bottom-width: 3px;
    border-style: solid;
    border-image: linear-gradient(to right, var(--primary-colour),var(--secondary-colour)) 1;
    width: 90%;
    max-width: 600px;
    margin-bottom: 1rem;
}
form {
    width: 90%;
    max-width: 600px;
    overflow: hidden;
    padding-top: 20px;
    justify-content: center;
}

.centre{
    display: flex;
    flex-direction: column;
    padding-bottom: 20px;
}
.submit{
    margin: 0 auto;
}

.input_group{
    margin-bottom: 30px;
    position: relative;
}
input {
    height: 2rem;
}
textarea {
    padding-top: 0.5rem;
}

input, textarea{
    width: calc(100% - 1rem);
    padding-left: 0.5rem;  
     /* Adds padding inside an input without increasing width */
    outline: 0;
    border-radius: 8px;
    border: solid 1px lightgray;
    background:transparent;
    resize: none;
    
}
label {
    height:100%;
    position: absolute;
    left: 0;
    top: 0;
    cursor: text;
    padding: 0.5rem;
    color: lightgray;
    transition:0.2s;
}
input:focus~label, input:valid~label, textarea:focus~label, textarea:valid~label{
    top:-30px;
    font-size: .8rem;
}

.submit {

    border: none;
    outline:none;
    position: relative;
    border-radius: 5px;
    background: linear-gradient(to right, var(--primary-colour), var(--secondary-colour));
    cursor: pointer;
    z-index: 1;
}

.submit::after{
    content: "";
    position: absolute;
    top: 1px;
    right: 1px;
    bottom: 1px;
    left: 1px;
    background-color: white;
    border-radius: 4px;
    z-index: -1;
    transition: 200ms;
}

.submit::before{
    content: attr(data);
    /*Allows button to be used across website, makle sure html has a data ="*button content*" field.*/
    font-size: 16px;
    background: linear-gradient(to left, var(--primary-colour), var(--secondary-colour));
    -webkit-background-clip: text;
    color: transparent;
    transition: 200ms;
}
.submit:hover::after {
    opacity: 10%;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
}

.submit:hover::before{
    color: white;
}
.contacts{
    display: flex;
    flex-direction: column;
    gap: .6rem;
}

.contact_icon{
    width: 20px;
}
.contact_info{
    display: flex;
}
.contact_info h4{
    margin: 0px;
}

.contact_info > h4{
    margin-left: 1rem;
}
/* 
Portfolio
------------------------------------------------------------------ */
.wipcontain{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
}
.WIP{
    width: 300px;
}

